--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
             Again, lucky man?
         </div>
     </section>
+    <img id="full">
+
+    </img>
     <!-- MAIN JS -->
     <script src="./assets/js/main.js"></script>
 </body>
