--- a/index.html
+++ b/index.html
@@ -138,9 +138,8 @@
             Again, lucky man?
         </div>
     </section>
-    <img id="full">
-
-    </img>
+    <div id="full">
+    </div>
     <!-- MAIN JS -->
     <script src="./assets/js/main.js"></script>
 </body>
