--- a/index.html
+++ b/index.html
@@ -12,10 +12,16 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <!-- CSS -->
     <link rel="stylesheet" href="./assets/css/styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="icon" href="./assets/img/favicon.png" type="image/gif" sizes="16x16">
     <title>Memory Card</title>
 </head>
 <body>
+    <section id= "loading">
+        <div class="loading-content">
+            <img src="./assets/img/Preloader_3.gif">
+        </div>
+    </section>
     <section class="menu-choose">
         <div class="game-tittle">
             <div class="name-tittle">
