--- a/index.html
+++ b/index.html
@@ -127,17 +127,8 @@
         </div>
     </section>
     <div class="hello">
-        <span>Hii, What's NEW?</span>
-        <div style="color:rgb(81, 111, 112); font-size: 16px;">IN THIS <span style="color: chocolate;">VERSION 2.1.2 </span>, WE IMPROVED SOME THINGS: </div>
-        + IMPROVED LOADING GAME! </br>
-        + FIXED BUGS WHEN LOSE AND WIN HAPPEN AT SAME TIME! </br>
-        + FIXED BUGS WHEN CHANGE FROM BIG SIZE TO SMALL SIZE! </br>
-        + ADD NEW MODE CHALLENGE! </br>
-        + ADD SOME SOUNDS EFFECTS!</br>
-        + ADD COOL EFFECTS BACKGROUND!</br>
-        </br>
-        <div style="color: crimson;">BECAUSE WE ADDED SOUNDS, YOU SHOULD BE CAREFUL!</div>
-        <p style="color:cadetblue; font-size: 16px;">SEE YAA! </p>
+        <span>Hii, I'm Taeki!</span>
+        <p style="color:cadetblue; font-size: 30px;">SEE YA! </p>
         <div class="btn" id = "hello-menu">
             GOOOOOO !
         </div>
